--- a/style.css
+++ b/style.css
@@ -209,18 +209,37 @@ ul {
         background: var(--accentColor);
     }   
 }
-@supports not selector(::-webkit-scrollbar) {
-    .info-popup__content  {
-        scrollbar-color: var(--accentColor) transparent;
-        scrollbar-width: thin  
+.popup-imgs {
+    display: flex;
+    align-items: center;
+    overflow: auto;
+    gap: 0 1.25rem;
+    padding-bottom: 15px;
+    &::-webkit-scrollbar {
+        width: 4px;
+        height: 4px;
     }
+    &::-webkit-scrollbar-track {
+        border-radius: 40px;
+        background: transparent;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+        border-radius: 40px;
+        background: var(--accentColor);
+    }   
 }
-  
 .popup-img {
     display: block;
-    width: 100%;
+    flex: 0 0 auto;
+    width: auto;
     height: auto;
+    max-width: calc(100% - 50px);
+    max-height: 630px;
     margin-top: 1.25rem;
+    &:first-child:last-child {
+        max-width: 100%;
+    }
 }
 .close {
     position: absolute;
@@ -266,16 +285,44 @@ ul {
 
     }
 }
+
 .popup-link {
     display: block;
+    position: relative;
     margin-top: 1.25rem;
+    padding: 5px 15px;
     width: fit-content;
     font-size: 1.25rem;
-    color: var(--textColor);
+    color: var(--bgColor);
+    background-color: var(--textColor);
     text-decoration: none;
-    transition: color 0.3s;
+    &::before {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: transparent;
+        border: 2px solid var(--accentColor);
+        transform: translate(0.2rem, 0.2rem);
+        transition: transform 0.3s;
+    }
     &:hover {
-        color: var(--accentColor);
+        &::before {
+            transform: translate(0.1rem, 0.1rem);
+        }
+    }
+}
+@supports not selector(::-webkit-scrollbar) {
+    .info-popup__content  {
+        scrollbar-color: var(--accentColor) transparent;
+        scrollbar-width: thin  
+    }
+    .popup-imgs {
+        scrollbar-color: var(--accentColor) transparent;
+        scrollbar-width: thin  
     }
 }
 
@@ -333,6 +380,12 @@ ul {
 @media (max-width: 1024px) {
     .projects-list {
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media(max-width: 990px) {
+    .popup-img {
+        max-height: 440px;
     }
 }
 
